# app

./: CMakeLists.txt  GeodeApp.exe.manifest  GeodeApp.exe.manifest.in  resource.rc  resource.res
.github/workflows/: cmake.yml
GeodeAppMac/: AppDelegate.h  AppDelegate.m  ContextStub.h  ContextStub.m  GeodeBaseVC.h  GeodeBaseVC.m  GeodeInstallVC.h  GeodeInstallVC.m  GeodeMainVC.h  GeodeMainVC.m  GeodeManageVC.h  GeodeManageVC.m  GeodeVersionVC.h  GeodeVersionVC.m  Info.plist  InstallViewController.h  InstallViewController.m  libgeode.dylib  libgeode.h  main.m
GeodeAppMac.xcodeproj/: project.pbxproj
GeodeAppMac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GeodeAppMac.xcodeproj/xcshareddata/xcschemes/: GeodeAppMac.xcscheme
GeodeAppMac/Assets.xcassets/AppIcon.appiconset/: Contents.json
GeodeAppMac/Base.lproj/: Main.storyboard
src/: Context.cpp  Context.hpp  Entry.cs  Manager.cpp  Manager.hpp  Style.cpp  Style.cs  Style.hpp  Window.cpp  Window.hpp  config.hpp  config.hpp.in  main.cpp
src/base/: Button.cpp  Button.hpp  Checkbox.cpp  Checkbox.hpp  Input.cpp  Input.hpp  Label.cpp  Label.hpp  Layout.cpp  Layout.hpp  RectWidget.cpp  RectWidget.hpp  Widget.cpp  Widget.hpp
src/utils/: output.cpp  utils.cpp  utils.hpp
src/widgets/: Button.cpp  Button.hpp  Label.cpp  Label.hpp  Rectangle.cpp  Rectangle.hpp  SelectBox.cpp  SelectBox.hpp  Tab.cpp  Tab.hpp  Widget.cpp  Widget.hpp
src/windows/: AppWindow.cs  CreateContextWindow.cpp  CreateContextWindow.hpp  MainWindow.cpp  MainWindow.cs  MainWindow.hpp  TestWindow.cpp  TestWindow.hpp  Window.cpp  Window.hpp
(+4 files in other folders)
